# hello-metal

./: .gitignore  .gitmodules  CMakeLists.txt  hello-metal.m
include/: common.h
shaders/: triangle.metal
src/: hello-metal.cpp
